[package]
name = "rust-bitcoin-u31-or-u30"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin-script = { git = "https://github.com/bitlayer-org/rust-bitcoin-script.git" }
bitcoin = { git = "https://github.com/bitlayer-org/rust-bitcoin", branch = "bf-stark" }
bitcoin-scriptexec = { git = "https://github.com/bitlayer-org/rust-bitcoin-scriptexec/" }

rand_chacha = "0.3.1"
rand = "0.8.5"

p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io.base58ck]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"

[patch.crates-io.bitcoin]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"

[patch.crates-io.bitcoin-io]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"

[patch.crates-io.bitcoin-units]
git = "https://github.com/bitlayer-org/rust-bitcoin"
branch = "bf-stark"